--- a/Neon.Web/Views/Authenticate/Guest.cshtml
+++ b/Neon.Web/Views/Authenticate/Guest.cshtml
@@ -10,6 +10,6 @@
 }
 
 <form asp-controller="Authenticate" asp-action="Guest" method="post">
-    <input placeholder="Username"/>
+    <input placeholder="Username" required/>
     <button type="submit">Play</button>
 </form>
