--- a/Neon.Web/Views/_ViewImports.cshtml
+++ b/Neon.Web/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Neon.Web.Models
 @using Neon.Web.Utils
 @using Neon.Web.Resources
+@using Neon.Web.Requests
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
