--- a/Neon.Web/wwwroot/scss/site.scss
+++ b/Neon.Web/wwwroot/scss/site.scss
@@ -1,3 +1,5 @@
 ﻿@import "modules/reset.scss";
+@import "modules/common.scss";
 @import "modules/palette.scss";
 @import "modules/nav.scss";
+@import "modules/form.scss";
