--- a/Neon.Web/Views/_ViewImports.cshtml
+++ b/Neon.Web/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Neon.Web
 @using Neon.Web.Models
+@using Neon.Web.Models.Data
 @using Neon.Web.Utils
 @using Neon.Web.Resources
-@using Neon.Web.Requests
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
