--- a/Neon.Web/Views/Authenticate/Login.cshtml
+++ b/Neon.Web/Views/Authenticate/Login.cshtml
@@ -2,8 +2,29 @@
 
 @{
     Layout = "_Layout";
+    ViewData.Set(new LayoutData
+    {
+        Title = Resource.Layout_Title_Login
+    });
 }
 
-<div>
-    <span>Wee</span>
-</div>
+<form class="neon-form" method="post">
+    <div>
+        <input asp-for="Username"/>
+        <span asp-validation-for="Username" class="text-danger"></span>
+    </div>
+    <div>
+        <input asp-for="Password"/>
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="RememberMe" class="neon-text-common"></label>
+        <input asp-for="RememberMe" type="checkbox"/>
+    </div>
+    <button type="submit" class="neon-btn-special">@Resource.User_Button_Play</button>
+</form>
+
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial"/>
+}
