--- a/Neon.Web/Views/Shared/_Field.cshtml
+++ b/Neon.Web/Views/Shared/_Field.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="neon-form-col">
-    <input asp-for="" />
-    <span asp-validation-for="" class="text-danger"></span>
+    @Html.Editor(a)
+    @* <input asp-for="" /> *@
+    @* <span asp-validation-for="" class="text-danger"></span> *@
 </div>
