--- a/Neon.Web/Views/Authenticate/Login.cshtml
+++ b/Neon.Web/Views/Authenticate/Login.cshtml
@@ -9,18 +9,9 @@
 }
 
 <form class="neon-form" method="post">
-    <div>
-        <input asp-for="Username"/>
-        <span asp-validation-for="Username" class="text-danger"></span>
-    </div>
-    <div>
-        <input asp-for="Password"/>
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div>
-        <label asp-for="RememberMe" class="neon-text-common"></label>
-        <input asp-for="RememberMe" type="checkbox"/>
-    </div>
+    <field for="Username"/>
+    <field for="Password"/>
+    <field for="RememberMe"/>
     <button type="submit" class="neon-btn-special">@Resource.User_Button_Play</button>
 </form>
 
