--- a/Neon.Web/Views/Shared/_Layout.cshtml
+++ b/Neon.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
     <header class="neon-header-bg">
         <nav class="navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
-                <a class="neon-link-special neon-nav-btn" asp-controller="Home" asp-action="Index">Neon</a>
+                <a asp-controller="Home" asp-action="Index" class="neon-link-special neon-nav-btn">
+                    @Resource.Layout_Nav_Neon
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,13 +29,19 @@
                         @if (!User.IsAuthenticated())
                         {
                             <li>
-                                <a class="neon-link-common neon-nav-btn" asp-controller="Authenticate" asp-action="Register">@Resource.Layout_Nav_Register</a>
+                                <a asp-controller="Authenticate" asp-action="Register" class="neon-link-common neon-nav-btn">
+                                    @Resource.Layout_Nav_Register
+                                </a>
                             </li>
                             <li>
-                                <a class="neon-link-common neon-nav-btn" asp-controller="Authenticate" asp-action="Login">@Resource.Layout_Nav_Login</a>
+                                <a asp-controller="Authenticate" asp-action="Login" class="neon-link-common neon-nav-btn">
+                                    @Resource.Layout_Nav_Login
+                                </a>
                             </li>
                             <li>
-                                <a class="neon-link-common neon-nav-btn" asp-controller="Authenticate" asp-action="Guest">@Resource.Layout_Nav_Guest</a>
+                                <a asp-controller="Authenticate" asp-action="Guest" class="neon-link-common neon-nav-btn">
+                                    @Resource.Layout_Nav_Guest
+                                </a>
                             </li>
                         }
                     </ul>
@@ -41,12 +49,14 @@
             </div>
         </nav>
     </header>
-    <main role="main" class="container">
+    <main class="container">
         @RenderBody()
     </main>
     <footer class="neon-footer-bg">
         <div class="container-fluid d-flex justify-content-center">
-            <a class="neon-link-special neon-nav-btn" asp-controller="User" asp-action="Index">@User.FindFirstValue(ClaimTypes.Name)</a>
+            <a asp-controller="User" asp-action="Index" class="neon-link-special neon-nav-btn">
+                @User.FindFirstValue(ClaimTypes.Name)
+            </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
