--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -47,7 +47,7 @@ footer {
 main {
   display: grid;
   align-items: center;
-  justify-content: center;
+  justify-items: center;
   height: 100%;
 }
 
@@ -96,7 +96,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  width: auto;
+  width: 32ch;
 }
 .neon-form input {
   text-align: center;
@@ -104,4 +104,85 @@ main {
 .neon-form .neon-form-col {
   display: flex;
   flex-direction: column;
+}
+.neon-form .neon-form-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.neon-palette-theme-dark.neon-palette-base-mignight.neon-body-bg {
+  background: #040606;
+}
+.neon-palette-theme-dark.neon-palette-base-mignight .neon-header-bg,
+.neon-palette-theme-dark.neon-palette-base-mignight .neon-footer-bg {
+  background: #020303;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-text-common {
+  color: #AAAAAA;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-text-special {
+  color: #00ADB5;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-link-common {
+  color: #AAAAAA;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-link-common:hover {
+  color: #AAAAAA;
+  background: #161D1D;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-link-special {
+  color: #00ADB5;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-link-special:hover {
+  color: #00ADB5;
+  background: #161D1D;
+}
+.neon-palette-theme-dark.neon-palette-accent-sea .neon-btn-special {
+  color: #FFFFFF;
+  background: #00ADB5;
+  font-weight: bold;
+}
+
+.neon-switch {
+  position: relative;
+  display: inline-block;
+  width: 3rem;
+  height: 1.5rem;
+}
+.neon-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.neon-switch input:checked + .neon-slider {
+  background-color: #00ADB5;
+}
+.neon-switch input:checked + .neon-slider:before {
+  -webkit-transform: translateX(1.5rem);
+  -ms-transform: translateX(1.5rem);
+  transform: translateX(1.5rem);
+}
+.neon-switch .neon-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #AAAAAA;
+  border-radius: 1.5rem;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+.neon-switch .neon-slider:before {
+  position: absolute;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  left: 0.25rem;
+  bottom: 0.25rem;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
 }
