--- a/Neon.Web/wwwroot/scss/modules/form.scss
+++ b/Neon.Web/wwwroot/scss/modules/form.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.25rem;
-	width: auto;
+	width: 32ch;
 
 	input {
 		text-align: center
@@ -11,5 +11,10 @@
 	.neon-form-col {
 		display: flex;
 		flex-direction: column;
+	}
+
+	.neon-form-row {
+		display: flex;
+		justify-content: space-between;
 	}
 }
