--- a/Neon.Web/Views/_ViewImports.cshtml
+++ b/Neon.Web/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using Neon.Web.Models
 @using Neon.Web.Models.Data
 @using Neon.Web.Utils
+@using Neon.Web.Utils.Extensions
 @using Neon.Web.Resources
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
