--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -7,3 +7,12 @@
         Title = Resource.Layout_Title_Gameplay,
     });
 }
+
+@section Scripts
+{
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
+    <script>
+        var connection = new signalR
+    </script>
+}
