--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -6,13 +6,11 @@
     {
         Title = Resource.Layout_Title_Gameplay,
     });
+
+
 }
 
 @section Scripts
 {
-    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
-
-    <script>
-        var connection = new signalR
-    </script>
+    <script src="~/js/gameplay.js"></script>
 }
