--- a/Neon.Web/Views/Shared/_Layout.cshtml
+++ b/Neon.Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main class="container-fluid">
         @RenderBody()
     </main>
     <footer class="neon-footer-bg">
