--- a/Neon.Web/wwwroot/scss/modules/common.scss
+++ b/Neon.Web/wwwroot/scss/modules/common.scss
@@ -20,8 +20,9 @@ footer {
 }
 
 main {
-	display: grid;
+	overflow: auto;
+	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-items: center;
-	height: 100%;
 }
