--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -45,11 +45,14 @@ footer {
 }
 
 main {
+  height: 100%;
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
   justify-items: center;
+  justify-content: center;
 }
 
 .neon-palette-theme-dark.neon-palette-base-mignight.neon-body-bg {
@@ -192,17 +195,61 @@ main {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-wrap: wrap;
   gap: 1ch;
 }
 
-.neon-opponent-container {
+.neon-user-opponents-container,
+.neon-user-equipment-container,
+.neon-user-inventory-container {
+  flex: 1;
+  max-height: 100%;
+  display: flex;
+}
+
+.neon-user-equipment-container {
+  justify-content: center;
+}
+
+.neon-user-inventory-container {
+  justify-content: end;
+}
+
+.neon-user-opponents {
   min-width: fit-content;
-  max-width: 40%;
+  max-width: 100%;
+  max-height: 100%;
   overflow: hidden auto;
   scrollbar-width: thin;
   display: grid;
   grid-template-columns: repeat(auto-fit, 24ch);
 }
-.neon-opponent-container * {
+.neon-user-opponents * {
   width: 100%;
+}
+
+.neon-user-equipment,
+.neon-user-inventory {
+  min-width: fit-content;
+  padding: 16px;
+  display: grid;
+  grid-auto-rows: 64px;
+  gap: 16px;
+}
+
+.neon-user-equipment {
+  grid-template-columns: repeat(5, 64px);
+}
+
+.neon-user-inventory {
+  max-height: 100%;
+  overflow: hidden auto;
+  scrollbar-width: thin;
+  grid-template-columns: repeat(5, 64px);
+}
+
+.neon-item-slot {
+  background-color: black;
+  width: 100%;
+  height: 100%;
 }
