--- a/Neon.Web/wwwroot/scss/modules/gameplay.scss
+++ b/Neon.Web/wwwroot/scss/modules/gameplay.scss
@@ -1,15 +1,36 @@
 ﻿@import "constants.scss";
 
+$item-slot-size: 64px;
+$item-slot-gap: 16px;
+
 .neon-gameplay-container {
 	width: 100%;
 	height: 100%;
 	display: flex;
+	flex-wrap: wrap;
 	gap: 1ch;
 }
 
-.neon-opponent-container {
+.neon-user-opponents-container,
+.neon-user-equipment-container,
+.neon-user-inventory-container {
+	flex: 1;
+	max-height: 100%;
+	display: flex;
+}
+
+.neon-user-equipment-container {
+	justify-content: center;
+}
+
+.neon-user-inventory-container {
+	justify-content: end;
+}
+
+.neon-user-opponents {
 	min-width: fit-content;
-	max-width: calc(100% / 5 * 2);
+	max-width: 100%;
+	max-height: 100%;
 	overflow: hidden auto;
 	scrollbar-width: thin;
 	display: grid;
@@ -20,5 +41,29 @@
 	}
 }
 
-.neon-user-container {
+.neon-user-equipment,
+.neon-user-inventory{
+	min-width: fit-content;
+	padding: $item-slot-gap;
+	display: grid;
+
+	grid-auto-rows: $item-slot-size;
+	gap: $item-slot-gap;
+}
+
+.neon-user-equipment {
+	grid-template-columns: repeat(5, $item-slot-size);
+}
+
+.neon-user-inventory {
+	max-height: 100%;
+	overflow: hidden auto;
+	scrollbar-width: thin;
+	grid-template-columns: repeat(5, $item-slot-size);
+}
+
+.neon-item-slot {
+	background-color: black;
+	width: 100%;
+	height: 100%;
 }
