--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -13,11 +13,9 @@
         <div class="neon-user-opponents">
             @foreach (var opponent in Model.Opponents)
             {
-                <div class="neon-user-@opponent.Username">
-                    <button class="neon-btn-special">
-                        @opponent.Username
-                    </button>
-                </div>
+                <button class="neon-user-@opponent.Username neon-btn-special">
+                    @opponent.Username
+                </button>
             }
         </div>
     </div>
@@ -25,21 +23,20 @@
         <div class="neon-user-equipment">
             @for (var i = 0; i < 25; i++)
             {
-                <div>
-                    <button id="neon-user-equipment-slot-@i" class="neon-item-slot">
-                    </button>
-                </div>
+                <button id="neon-user-equipment-slot-@i" class="neon-item-slot">
+                </button>
             }
         </div>
+        <form class="neon-user-input">
+            <input id="neon-user-message"/>
+        </form>
     </div>
     <div class="neon-user-inventory-container">
         <div class="neon-user-inventory">
             @for (var i = 0; i < 100; i++)
             {
-                <div>
-                    <button id="neon-user-inventory-slot-@i" class="neon-item-slot">
-                    </button>
-                </div>
+                <button id="neon-user-inventory-slot-@i" class="neon-item-slot">
+                </button>
             }
         </div>
     </div>
