--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -27,9 +27,13 @@
                 </button>
             }
         </div>
-        <form class="neon-user-input">
-            <input id="neon-user-message"/>
-        </form>
+        <div>
+            <ol class="neon-chat-messages">
+            </ol>
+            <form class="neon-user-input">
+                <input id="neon-user-message"/>
+            </form>
+        </div>
     </div>
     <div class="neon-user-inventory-container">
         <div class="neon-user-inventory">
