--- a/Neon.Web/Views/Gameplay/Index.cshtml
+++ b/Neon.Web/Views/Gameplay/Index.cshtml
@@ -27,11 +27,11 @@
                 </button>
             }
         </div>
-        <div>
-            <ol class="neon-chat-messages">
+        <div class="neon-user-chat">
+            <ol class="neon-user-messages">
             </ol>
-            <form class="neon-user-input">
-                <input id="neon-user-message"/>
+            <form class="neon-user-form">
+                <input id="neon-user-input"/>
             </form>
         </div>
     </div>
