fixed login localization exception

--- a/Neon.Web/Views/Shared/_Layout.cshtml
+++ b/Neon.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <menu class="navbar-nav flex-grow-1">
                         @if (User.IsAuthenticated())
                         {
                             <li style="margin-left: auto">
@@ -50,7 +50,7 @@
                                 </a>
                             </li>
                         }
-                    </ul>
+                    </menu>
                 </div>
             </div>
         </nav>
